WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28279
'box-orient: block-axis' behaves like 'box-orient: horizontal', causes an assertion failure in debug builds
https://bugs.webkit.org/show_bug.cgi?id=28279
Summary
'box-orient: block-axis' behaves like 'box-orient: horizontal', causes an ass...
mitz
Reported
2009-08-13 14:03:54 PDT
Patch forthcoming
Attachments
Map 'block-axis' to 'vertical'
(18.88 KB, patch)
2009-08-13 14:29 PDT
,
mitz
eric
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2009-08-13 14:29:26 PDT
Created
attachment 34787
[details]
Map 'block-axis' to 'vertical'
Eric Seidel (no email)
Comment 2
2009-08-13 14:45:43 PDT
Comment on
attachment 34787
[details]
Map 'block-axis' to 'vertical' OK. But the test results are in the wrong place. They should be next to the test (since this has no paltform-specific goop). r=me if you fix the test locations (and associated ChangeLog entries).
mitz
Comment 3
2009-08-13 17:53:25 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/47261
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug