WebCore: 'box-orient: block-axis' behaves like 'box-orient: horizontal', causes an assertion failure in debug builds https://bugs.webkit.org/show_bug.cgi?id=28279

Reviewed by Eric Seidel.

Test: fast/flexbox/block-axis.html

* css/CSSPrimitiveValueMappings.h:
(WebCore::CSSPrimitiveValue::operator EBoxOrient): Map block-axis to
vertical.

LayoutTests:     2009-08-13  Dan Bernstein  <mitz@apple.com>

Reviewed by Eric Seidel.

'box-orient: block-axis' behaves like 'box-orient: horizontal', causes
an assertion failure in debug builds
https://bugs.webkit.org/show_bug.cgi?id=28279

* fast/flexbox/block-axis-expected.checksum: Added.
* fast/flexbox/block-axis-expected.png: Added.
* fast/flexbox/block-axis-expected.txt: Added.
* fast/flexbox/block-axis.html: Added.



Canonical link: https://commits.webkit.org/38862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47261 268f45cc-cd09-0410-ab3c-d52691b4dbfc